# psl-ai-engineer

./: .env  ARCHITECTURE.md  BEST_PRACTICES.md  README.md  main.py  pyproject.toml
drafts/: 201_E_STA_101_assignment_2s_draft_20260515_175515.json  cease_desist_notice_draft_20260515_172131.json  cease_desist_notice_draft_20260515_172559.json  employment_contract_scan_draft_20260515_171850.json  employment_contract_scan_draft_20260515_175917.json  handwritten_settlement_scan_draft_20260515_174218.json  settlement_agreement_draft_20260515_172842.json
edit_patterns/: patterns.json
edits/: edit_001a2b3c.json  edit_004d5e6f.json  edit_007g8h9i.json
processed/: 1603ab9e05448ee4.json  201_E_STA_101_assignment_2s_fields.json  249c5db853c25342.json  67b53a30a5274242.json  6d12458dc910c4a2.json  89f20aacdcc9e681.json  cease_desist_notice_fields.json  employment_contract_scan_fields.json  handwritten_settlement_scan_fields.json  settlement_agreement_fields.json
sample_inputs/: create_handwritten_sample.py  generate_samples.py
sample_outputs/: cease_desist_notice_draft.json  employment_contract_scan_draft.json  settlement_agreement_draft.json
src/: pipeline.py
src/api/: main.py
src/extraction/: extractor.py
src/feedback/: edit_capture.py
src/generation/: drafter.py
src/ocr/: engine.py
src/retrieval/: store.py
tests/: evaluate.py  ocr_fit_test.py
vectorstore/: chroma.sqlite3
